cmake_minimum_required(VERSION 3.15)
set (KUN /home/test/github/kunlib)
#set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
add_subdirectory(config)
add_subdirectory(pbase64)
add_subdirectory(pkafka)
add_subdirectory(db)
add_subdirectory(predis)
add_subdirectory(cpost)
add_subdirectory(evdrv)
add_subdirectory(resource)
add_subdirectory(timer)
add_subdirectory(evb)
add_subdirectory(utcp)
add_subdirectory(zk)
add_subdirectory(email)
