cmake_minimum_required(VERSION 2.8)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${KUN}/libs)
file(GLOB SRC_LIST  "*.cpp")
add_definitions(-g -fPIC -std=c++11)
include_directories(/usr/local/include)
include_directories(${KUN}/user)
add_library(evdrv SHARED ${SRC_LIST})
LINK_DIRECTORIES(${KUN}/libs /usr/local/lib )
target_link_libraries(evdrv  evhtp event jsoncpp glog pthread)
