cmake_minimum_required(VERSION 2.8)
set(SRC_LIST base64.cpp)
add_definitions(-g -fPIC -std=c++11)
set(BASE /home/panghao/kunlib)
include_directories(${BASE}/include)
#add_library(tele SHARED ${SRC_LIST})
#set_target_properties(store PROPERTIES VERSION 1.1)
add_library(pbase64 SHARED ${SRC_LIST})
target_link_libraries(pbase64)
