cmake_minimum_required(VERSION 2.8)
set(SRC_LIST kafka_producer.cpp kafka_consumer.cpp)
add_definitions(-g -fPIC -std=c++11)
set(BASE /home/test/kunlib)
include_directories(/usr/local/include/librdkafka)
#add_library(tele SHARED ${SRC_LIST})
#set_target_properties(store PROPERTIES VERSION 1.1)
LINK_DIRECTORIES(/usr/local/lib /usr/local/ssl/lib)
add_library(pkafka SHARED ${SRC_LIST})
target_link_libraries(pkafka z  ssl crypto rdkafka glog)
