set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${KUN}/libs)
set(hiredis_DIR /home/test/pg/redis-5.0.4/deps/hiredis)
add_definitions(-std=c++11)
include_directories(${hiredis_DIR} ${KUN}/include ${KUN}/include/hiredis ${KUN}/user)
link_directories(${KUN}/libs ${hiredis_IDR})
add_library(predis SHARED redis_pool.cpp)
target_link_libraries(predis kunconfig glog)
