set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${KUN}/libs)
set(hiredis_DIR /usr/local/include/hiredis)
add_definitions(-std=c++11)
include_directories(${hiredis_DIR} ${KUN}/include  ${KUN}/user)
link_directories(${KUN}/libs ${hiredis_IDR})
add_library(predis SHARED redis_cmd.cpp redis_control.cpp redis_pool.cpp)
target_link_libraries(predis kunconfig glog)
