cmake_minimum_required(VERSION 2.8)
add_definitions(-g)
add_definitions(-DTHREADED)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${KUN}/libs)
include_directories(/usr/local/include)
include_directories(${KUN}/include)
link_directories(${KUN}/libs)
add_library(zook  SHARED zklock.cpp)
target_link_libraries(zook zookeeper hashtable pthread)
